--- a/literatura.bib
+++ b/literatura.bib
@@ -1,10 +1,91 @@
-@article{shortcode,
-author = {Lastname, Firstname},
-file = {Diplomski_LovroMarkovi.pdf},
-journal = {Journal name},
-number = {xx},
-pages = {x--xx},
-title = {Title},
-volume = {xx},
-year = {1948}    
+@book{book:9291,
+	title =     {Geometric control of mechanical systems: modeling, analysis, and design for simple mechanical control systems},
+	author =    {Francesco Bullo, Andrew D. Lewis},
+	publisher = {Springer},
+	isbn =      {0387221956,9780387221953},
+	year =      {2005},
+	series =    {Texts in applied mathematics 49},
+	edition =   {1},
+	volume =    {},
+}
+
+@Book{geoSchuller,
+	author = {Frederic P. Schuller},
+	title = {Lectures on the Geometric Anatomy
+	of Theoretical Physics},
+	publisher = {Friedrich-Alexander-Universität Erlangen-Nürnberg,
+	Institut für Theoretische Physik III},
+	year = {2017},
+	OPTkey = {key},
+	OPTvolume = {volume},
+	OPTnumber = {number},
+	OPTseries = {series},
+	OPTaddress = {address},
+	OPTedition = {edition},
+	OPTmonth = {month},
+	OPTnote = {note},
+	OPTannote = {annote},
+}
+
+@ARTICLE{2010arXiv1003.2005L,
+   author = {{Lee}, T. and {Leok}, M. and {Harris McClamroch}, N.},
+    title = "{Control of Complex Maneuvers for a Quadrotor UAV using Geometric Methods on SE(3)}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1003.2005},
+ primaryClass = "math.OC",
+ keywords = {Mathematics - Optimization and Control, Computer Science - Systems and Control},
+     year = 2010,
+    month = mar,
+   adsurl = {http://adsabs.harvard.edu/abs/2010arXiv1003.2005L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{6161306,
+	author={T. Fernando and J. Chandiramani and T. Lee and H. Gutierrez},
+	booktitle={2011 50th IEEE Conference on Decision and Control and European Control Conference},
+	title={Robust adaptive geometric tracking controls on SO(3) with an application to the attitude dynamics of a quadrotor UAV},
+	year={2011},
+	volume={},
+	number={},
+	pages={7380-7385},
+	keywords={adaptive control;asymptotic stability;attitude control;autonomous aerial vehicles;matrix algebra;robust control;robust adaptive geometric tracking control;attitude dynamics;quadrotor UAV;orthogonal group;attitude representation;Euler angle;adaptive law;attitude command;inertia matrix;tracking error;unstructured disturbance;Attitude control;Control systems;Robustness;Adaptive systems;Vectors;Manifolds;Angular velocity},
+	doi={10.1109/CDC.2011.6161306},
+	ISSN={0191-2216},
+	month={Dec},}
+
+
+@ARTICLE{2011arXiv1109.4457L,
+	author = {{Lee}, T. and {Leok}, M. and {Harris McClamroch}, N.},
+	title = "{Nonlinear Robust Tracking Control of a Quadrotor UAV on SE(3)}",
+	journal = {ArXiv e-prints},
+	archivePrefix = "arXiv",
+	eprint = {1109.4457},
+	primaryClass = "math.OC",
+	keywords = {Mathematics - Optimization and Control, Computer Science - Systems and Control},
+	year = 2011,
+	month = sep,
+	adsurl = {http://adsabs.harvard.edu/abs/2011arXiv1109.4457L},
+	adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{5717652,
+	author={T. Lee and M. Leok and N. H. McClamroch},
+	booktitle={49th IEEE Conference on Decision and Control (CDC)},
+	title={Geometric tracking control of a quadrotor UAV on SE(3)},
+	year={2010},
+	volume={},
+	number={},
+	pages={5420-5425},
+	keywords={aircraft control;nonlinear control systems;remotely operated vehicles;tracking;geometric tracking control;quadrotor unmanned aerial vehicle;rotor thrust;asymptotic tracking;vehicle body-fixed axis;quadrotor UAV rigid body dynamics;nonlinear tracking controller;special Euclidean group;closed loop property;Unmanned aerial vehicles;Stability analysis;Attitude control;Asymptotic stability;Propellers;Trajectory;Rotors},
+	doi={10.1109/CDC.2010.5717652},
+	ISSN={0191-2216},
+	month={Dec},}
+
+@article{zavrsniCirjak,
+	author = {Anđela Čirjak},
+	title = {Implementacija i evaluacija
+	geometrijskog upravljanja na
+	multirotorskim letjelicama},
+	date = {srpanj 2016},
 }
