--- a/literatura.bib
+++ b/literatura.bib
@@ -89,3 +89,21 @@ archivePrefix = "arXiv",
 	multirotorskim letjelicama},
 	date = {srpanj 2016},
 }
+
+@online{gitRepo1,
+	author = {Lovro Marković},
+	title = {Implementacija geometrijskog upravljanja u C++ programskom jeziku - 3DR arducopter letjelica},
+	url = {https://github.com/larics/mmuav_gazebo/tree/geometry_control},
+}
+
+@online{gitRepo2,
+	author = {Lovro Marković},
+	title = {Implementacija geometrijskog upravljanja u C++ programskom jeziku - MORUS letjelica},
+	url = {https://github.com/larics/morus_uav_gazebo/tree/geometry_control},
+}
+
+@online{gitRepo3,
+	author = {Lovro Marković},
+	title = {Implementacija geometrijskog upravljanja u C++ programskom jeziku - modul za pixhawk mikrokontroler},
+	url = {https://github.com/larics/morus_uav_gazebo/tree/geometry_control},
+}
