--- a/Diplomski_LovroMarkovi.tex
+++ b/Diplomski_LovroMarkovi.tex
@@ -780,7 +780,8 @@ Radi lakše pretvorbe uvodi se matrični zapis na slijedeći način:
 \chapter{Zaključak}
 	\paragraph{}
 	Geometrijski način upravljanja sintetiziran je i implementiran za model multirotorske letjelicu u Gazebo simulaciji, unutar okruženja ROS te programskim jezikom C++ \cite{gitRepo1},\cite{gitRepo2}. Upravljanje je također implementirano kao modul za PIXHAWK mikrokontroler \cite{gitRepo3}. Provedene su simulacije unutar Gazebo simulatore u ROS okruženju. Iako je naglasak stavljen na pozicijskoi načinu upravljanja slijeđenjem trajektorije, prikazani su i odzivi na blage skokovite pobude, kao početna točka u testiranju ovakvog upravljanja. Imajući u vidu da je geometrijsko upravljanje namijenjeno za slijeđenje trajektorije ono nije u mogućnosti ostati stabilno za velike vrijednosti skokovitih pobuda. Unatoč tome, odzivi na blage pobude bili su zadovoljavajući uz iznimku rotacije oko z-osi. \\
-	Prilikom slijeđenja trajektorije geometrijsko upravljanje pokazalo se zadovoljavajućim. Najveći problem ponovno se javlja prilikom rotacije letjelice oko z-osi što se može objasniti velikom tromošću samog tijela letjelice te zbog samih benzinskih motora. Naime, unutar motori u Gazebo modelu imaju ugrađenu vremensku konstantu prijelazne pojave brzine vrtnje rotora što znači da promjene upravljačkih sila ne djeluju trenutno na tijelo letjelice. Budući da je jedna od pretpostavki ovakvog načina upravljanja trenutno djelovanje upravljačkih vrijednosti, ova odstupanja su razumljiva. 
+	Prilikom slijeđenja trajektorije geometrijsko upravljanje pokazalo se zadovoljavajućim. Najveći problem ponovno se javlja prilikom rotacije letjelice oko z-osi što se može objasniti velikom tromošću samog tijela letjelice te zbog samih benzinskih motora. Naime, unutar motori u Gazebo modelu imaju ugrađenu vremensku konstantu prijelazne pojave brzine vrtnje rotora što znači da promjene upravljačkih sila ne djeluju trenutno na tijelo letjelice. Budući da je jedna od pretpostavki ovakvog načina upravljanja trenutno djelovanje upravljačkih vrijednosti, ova odstupanja su razumljiva. \\
+	 
 	
 \chapter{Dodatak}
 	\section{Funkcije pogreške u SO(3) prostoru}
